syntax = "proto3";

package eth.erc721.v1;

message Transfers {
  repeated Transfer transfers = 1; 
}

message Transfer {
  string contractAddress = 1;
  string from = 2;
  string to = 3;
  string token_id = 4;
  string trx_hash = 5;
}


message Metadata{
  string name = 1;
  string description =2;
  string image = 3;
  string attributes = 4;
}

message nftOwner{
  string owner = 1;
  string contract_address = 2;
  string token_id =3;
  string metadataUrl = 4;
  Metadata metadata = 5;
  string txhash = 6;
  
}
